--- a/app/static/profile.html
+++ b/app/static/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SixLove | Profile</title>
     <!-- Bootstrap -->
-    <!-- <link
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
@@ -15,7 +15,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
-    ></script> -->
+    ></script>
     <link rel="stylesheet" href="./styles/style.css" />
     <script src="./scripts/profile.js" defer></script>
     <!-- Font Awesome -->
@@ -112,7 +112,7 @@
           <button class="btn-toggle-achievements" id="display-achievements-btn">
             <img
               src="./images/toggle-achievements-icon.svg"
-              alt="Toggle toggle achievements icon"
+              alt="Toggle achievements icon"
             />
           </button>
         </div>
@@ -165,6 +165,8 @@
         </div>
       </div>
       <!-- --------------X------------- Profile Achievements Section --------------X-------------  -->
+      <!-- ---------------------------- Settings Menu ----------------------------  -->
+      <!-- --------------X------------- Settings Menu --------------X-------------  -->
     </main>
     <!-- --------------X------------- Main --------------X-------------  -->
   </body>
