--- a/app/static/profile.html
+++ b/app/static/profile.html
@@ -73,7 +73,7 @@
       <!-- ---------------------------- Background ----------------------------  -->
       <div class="background">
         <p>Background</p>
-        <a href="#">
+        <a data-bs-toggle="modal" data-bs-target="#SettingsMenu">
           <!-- <img src="./images/more-icon.svg" alt="Settings Icon" /> -->
           <img src="./images/settings-icon.svg" alt="Settings Icon" />
         </a>
@@ -166,6 +166,27 @@
       </div>
       <!-- --------------X------------- Profile Achievements Section --------------X-------------  -->
       <!-- ---------------------------- Settings Menu ----------------------------  -->
+      <!-- <div id="SettingsMenu" class="modal-dialog modal-fullscreen-sm-down">
+        ...
+      </div> -->
+      <div id="SettingsMenu" class="modal fade" tabindex="-1">
+        <div class="modal-dialog modal-fullscreen">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Modal title</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <div></div>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- --------------X------------- Settings Menu --------------X-------------  -->
     </main>
     <!-- --------------X------------- Main --------------X-------------  -->
