--- a/app/static/profile.html
+++ b/app/static/profile.html
@@ -173,7 +173,7 @@
         <div class="modal-dialog modal-fullscreen">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title">Modal title</h5>
+              <h5 class="modal-title">Settings</h5>
               <button
                 type="button"
                 class="btn-close"
@@ -182,7 +182,82 @@
               ></button>
             </div>
             <div class="modal-body">
-              <div></div>
+              <div>
+                <div>
+                  <p>Training Days</p>
+                  <div>
+                    <span>Mon, Wed, Fri</span>
+                    <span><i class="fas fa-chevron-right"></i></span>
+                  </div>
+                </div>
+                <div>
+                  <p>Training Intensity</p>
+                  <div>
+                    <span>2 hours</span>
+                    <span><i class="fas fa-chevron-right"></i></span>
+                  </div>
+                </div>
+                <div>
+                  <p>Personal Goals</p>
+                  <div>
+                    <span>unset</span>
+                    <span><i class="fas fa-chevron-right"></i></span>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div>
+                  <p>Notifications</p>
+                  <div>
+                    <span><i class="fas fa-chevron-right"></i></span>
+                  </div>
+                </div>
+                <div>
+                  <p>Account</p>
+                  <div>
+                    <span><i class="fas fa-chevron-right"></i></span>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div>
+                  <p>Manage friends settings</p>
+                  <div>
+                    <span><i class="fas fa-chevron-right"></i></span>
+                  </div>
+                </div>
+                <div>
+                  <p>Privacy & Security</p>
+                  <div>
+                    <span><i class="fas fa-chevron-right"></i></span>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div>
+                  <p>Dark mode</p>
+                  <div id="mode-switch" class="form-check form-switch">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      role="switch"
+                      id="flexSwitchCheckDefault"
+                    />
+                  </div>
+                </div>
+                <div>
+                  <p>Feed back & Help Center</p>
+                  <div>
+                    <span><i class="fas fa-chevron-right"></i></span>
+                  </div>
+                </div>
+                <div>
+                  <p>About us</p>
+                  <div>
+                    <span><i class="fas fa-chevron-right"></i></span>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
