--- a/app/static/profile.html
+++ b/app/static/profile.html
@@ -181,23 +181,23 @@
                 aria-label="Close"
               ></button>
             </div>
-            <div class="modal-body">
-              <div>
-                <div>
+            <div id="settings-body" class="modal-body">
+              <div class="settings-section">
+                <div class="settings-div">
                   <p>Training Days</p>
                   <div>
                     <span>Mon, Wed, Fri</span>
                     <span><i class="fas fa-chevron-right"></i></span>
                   </div>
                 </div>
-                <div>
+                <div class="settings-div">
                   <p>Training Intensity</p>
                   <div>
                     <span>2 hours</span>
                     <span><i class="fas fa-chevron-right"></i></span>
                   </div>
                 </div>
-                <div>
+                <div class="settings-div">
                   <p>Personal Goals</p>
                   <div>
                     <span>unset</span>
@@ -205,36 +205,36 @@
                   </div>
                 </div>
               </div>
-              <div>
-                <div>
+              <div class="settings-section">
+                <div class="settings-div">
                   <p>Notifications</p>
                   <div>
                     <span><i class="fas fa-chevron-right"></i></span>
                   </div>
                 </div>
-                <div>
+                <div class="settings-div">
                   <p>Account</p>
                   <div>
                     <span><i class="fas fa-chevron-right"></i></span>
                   </div>
                 </div>
               </div>
-              <div>
-                <div>
+              <div class="settings-section">
+                <div class="settings-div">
                   <p>Manage friends settings</p>
                   <div>
                     <span><i class="fas fa-chevron-right"></i></span>
                   </div>
                 </div>
-                <div>
+                <div class="settings-div">
                   <p>Privacy & Security</p>
                   <div>
                     <span><i class="fas fa-chevron-right"></i></span>
                   </div>
                 </div>
               </div>
-              <div>
-                <div>
+              <div class="settings-section">
+                <div class="settings-div">
                   <p>Dark mode</p>
                   <div id="mode-switch" class="form-check form-switch">
                     <input
@@ -245,19 +245,22 @@
                     />
                   </div>
                 </div>
-                <div>
+                <div class="settings-div">
                   <p>Feed back & Help Center</p>
                   <div>
                     <span><i class="fas fa-chevron-right"></i></span>
                   </div>
                 </div>
-                <div>
+                <div class="settings-div">
                   <p>About us</p>
                   <div>
                     <span><i class="fas fa-chevron-right"></i></span>
                   </div>
                 </div>
               </div>
+            </div>
+            <div class="settings-footer">
+              <p>SixLove <i class="fa-regular fa-copyright"></i></p>
             </div>
           </div>
         </div>
