--- a/static/success.html
+++ b/static/success.html
@@ -18,26 +18,17 @@
     ></script> -->
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body id="landing">
+  <body id="success">
     <div class="auth-container">
       <!-- ---------------------------- Logo ----------------------------  -->
       <img class="logo" src="./images/SixLoveLogo.svg" alt="Six Love Logo" />
       <!-- --------------X------------- Logo --------------X-------------  -->
       <!-- ---------------------------- Main ----------------------------  -->
-      <p>Got what it takes to become a competitive tennis player?</p>
-      <img
-        class="landing-pic"
-        src="./images/landing-pic.svg"
-        alt="The landing pic."
-      />
-      <p>Sign up and find out.</p>
-      <!-- --------------X------------- Main --------------X-------------  -->
-      <!-- ---------------------------- Actions Buttons ----------------------------  -->
+      <p class="success-msg">Training plan created successfully!</p>
+      <p class="success-celebration">🥳</p>
       <div class="action-btns">
-        <a href="./login.html"><button>Login</button></a>
-        <a href="./signup.html"><button>Sign Up</button></a>
+        <a href="./tennis.html"><button>View Your Plan</button></a>
       </div>
-      <!-- --------------X------------- Action Buttons --------------X-------------  -->
     </div>
   </body>
 </html>
