--- a/static/onboarding.html
+++ b/static/onboarding.html
@@ -17,20 +17,51 @@
       crossorigin="anonymous"
     ></script> -->
     <link rel="stylesheet" href="./styles/style.css" />
+    <script src="./scripts/onboarding.js" defer></script>
   </head>
-  <body id="landing">
+  <body id="onboarding">
     <div class="auth-container">
       <!-- ---------------------------- Logo ----------------------------  -->
       <img class="logo" src="./images/SixLoveLogo.svg" alt="Six Love Logo" />
       <!-- --------------X------------- Logo --------------X-------------  -->
       <!-- ---------------------------- Main ----------------------------  -->
-      <p>Got what it takes to become a competitive tennis player?</p>
-      <img
-        class="landing-pic"
-        src="./images/landing-pic.svg"
-        alt="The landing pic."
-      />
-      <p>Sign up and find out.</p>
+      <!-- <form action="./success.html">
+        <div>
+          <p>How long would you like your training plan to be?</p>
+          <div>
+            <input type="button" value="RapidFire" />
+            <span>6 weeks</span>
+          </div>
+          <input type="submit" value="ok" />
+        </div>
+      </form> -->
+      <!-- onboarding.html -->
+      <form id="onboardingForm" method="post" action="{% url 'onboarding' %}">
+        {% csrf_token %}
+        <div id="question1" class="question">
+          <p>How long would you like your training plan to be?</p>
+          {{ form.training_duration|render_buttons }}
+          <button type="button" onclick="nextQuestion()">Next</button>
+        </div>
+        <div id="question2" class="question" style="display: none">
+          <p>How often would you like to train?</p>
+          {{ form.training_frequency|render_buttons }}
+          <button type="button" onclick="nextQuestion()">Next</button>
+        </div>
+        <div id="question3" class="question" style="display: none">
+          <p>What days would you like to train on?</p>
+          {{ form.training_days|render_buttons }}
+          <button type="button" onclick="nextQuestion()">Next</button>
+        </div>
+        <div id="question4" class="question" style="display: block">
+          <p>Click the button to build your training plan.</p>
+          <div class="form-btn-group">
+            <button type="submit">Build My Plan</button>
+            <span>You are so close!</span>
+          </div>
+        </div>
+      </form>
+
       <!-- --------------X------------- Main --------------X-------------  -->
       <!-- ---------------------------- Actions Buttons ----------------------------  -->
       <div class="action-btns">
